--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-server": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@nguniversal/express-engine": "^10.1.0",
+    "@rxweb/reactive-form-validators": "^2.1.2",
     "bootstrap": "^4.5.3",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
